--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 flask = "*"
 flask-sqlalchemy = "*"
 bcrypt = "*"
+pyjwt = "*"
+psycopg2 = "*"
+flask-mail = "*"
+flask-cors = "*"
 
 [dev-packages]
 
