--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,10 +7,11 @@ name = "pypi"
 flask = "*"
 flask-sqlalchemy = "*"
 bcrypt = "*"
-pyjwt = "*"
 psycopg2 = "*"
 flask-mail = "*"
 flask-cors = "*"
+flask-jwt-extended = "*"
+pyjwt = "*"
 
 [dev-packages]
 
