--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5"
