--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,12 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
-    "react-datepicker": "^8.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
